--- a/3. Concepts in deep learning/6. How models "learn".md
+++ b/3. Concepts in deep learning/6. How models "learn".md
@@ -21,7 +21,7 @@
 ---
 ## The math of the perfect PB&J
 
-![](6.Pasted%20image%2020240928210946.png)
+![6.Pasted image 20240928210946](../pic/3.%20Concepts%20in%20deep%20learning/6.Pasted%20image%2020240928210946.png)
 
 	순전파는 이러한 원재료를 정확한 비율로 섞는 과정을 포함하며, 그 결과물이 바로 샌드위치임
 	학습을 통해 W1, W2, 즉 땅콩버터와 젤리의 양을 서서히 조정하여 완벽한 PB&J 샌드위치를 만드는것
@@ -29,7 +29,7 @@
 ---
 ## The PB&J ANN
 
-![](6.Pasted%20image%2020240928211551.png)
+![6.Pasted image 20240928211551](../pic/3.%20Concepts%20in%20deep%20learning/6.Pasted%20image%2020240928211551.png)
 
 <span style="color:rgb(236, 158, 111)">순전파: 샌드위치 만들기</span>
 <span style="color:rgb(230, 122, 122)">역전파: 부정적 피드백에 의한 가중치 조정</span> 
@@ -42,7 +42,7 @@
 ---
 ## DL learning: PB&J business analogy
 
-![](6.Pasted%20image%2020240928212509.png)
+![6.Pasted image 20240928212509](../pic/3.%20Concepts%20in%20deep%20learning/6.Pasted%20image%2020240928212509.png)
 
 <span style="color:rgb(236, 158, 111)">순전파: 돈/서비스가 네트워크를 통해 흐른다</span>
 <span style="color:rgb(230, 122, 122)">역전파 : '오류 메시지'가 사장에게서 다시 부서들을 거쳐 내려온다.</span> 
