--- a/5. Math, numpy, PyTorch/13. Spectral theories in mathematics.md
+++ b/5. Math, numpy, PyTorch/13. Spectral theories in mathematics.md
@@ -5,11 +5,11 @@
 ---
 ## General idea of spectral theories in mathematics
 
-![](13.Pasted%20image%2020240930213240.png)
+![13.Pasted image 20240930213240](../pic/5.%20Math,%20numpy,%20PyTorch/13.Pasted%20image%2020240930213240.png)
 
 	모든 스펙트럼 이론의 기본 개념은 복잡한 무언가에서 시작하여 많은 개별 단순 구성 요소로 분해 하는것이다.
 
-![](13.Pasted%20image%2020240930213637.png)
+![13.Pasted image 20240930213637](../pic/5.%20Math,%20numpy,%20PyTorch/13.Pasted%20image%2020240930213637.png)
 	예를 들어 신호 처리, 시계열 분석 및 이미지 분석에 사용되는 푸리에 변환이 있음
 
 	푸리에 변환의 아이디어는 복잡한 신호나 이미지를 가져와서 이 신호를 사인파의 합으로 분해할 수 있다는 것이다.
@@ -20,7 +20,7 @@
 ---
 ## Spectral theories and deep learning
 
-![](13.Pasted%20image%2020240930214108.png)
+![13.Pasted image 20240930214108](../pic/5.%20Math,%20numpy,%20PyTorch/13.Pasted%20image%2020240930214108.png)
 
 	각각의 노드는 사실 매우 단순한 수학적 연산을 수행함.
 여기($x^Tw$)서 내적(dot product)이라는 연산을 사용함 이후 그 내적을 어떤
