--- a/5. Math, numpy, PyTorch/14. Terms and datatypes in math and computers.md
+++ b/5. Math, numpy, PyTorch/14. Terms and datatypes in math and computers.md
@@ -4,7 +4,7 @@
 ---
 ## Linear algebra terminology
 
-![](14.Pasted%20image%2020240930224237.png)
+![14.Pasted image 20240930224237](../pic/5.%20Math,%20numpy,%20PyTorch/14.Pasted%20image%2020240930224237.png)
 
 	스칼라 : 개별적인 숫자가 하나만 존재하는것
 	벡터 : 숫자의 열 또는 행
@@ -16,12 +16,12 @@
 
 <span style="color:rgb(205, 205, 81)">행렬로써 흑백이미지</span> 
 
-![](14.Pasted%20image%2020240930222140.png)
+![14.Pasted image 20240930222140](../pic/5.%20Math,%20numpy,%20PyTorch/14.Pasted%20image%2020240930222140.png)
 
 	행렬을 이미지로 변환하거나 행렬을 이미지로 표현하는 아이디어는 각 숫자, 즉 행렬의 각 요소의 값을 어떤 밝기 강도로 변환하는 것
 
 <span style="color:rgb(205, 205, 81)">텐서로써의 컬러 이미지</span> 
-![](14.Pasted%20image%2020240930222319.png)
+![14.Pasted image 20240930222319](../pic/5.%20Math,%20numpy,%20PyTorch/14.Pasted%20image%2020240930222319.png)
 
 	빨간색 채널, 녹색 채널, 파란색 채널
 ---
