--- a/5. Math, numpy, PyTorch/20. Logarithms.md
+++ b/5. Math, numpy, PyTorch/20. Logarithms.md
@@ -3,13 +3,13 @@
 ---
 ## Logarithm: The inverse of the natural exponential
 
-![](20.Pasted%20image%2020241003203517.png)
+![20.Pasted image 20241003203517](../pic/5.%20Math,%20numpy,%20PyTorch/20.Pasted%20image%2020241003203517.png)
 
 	자연로그는 자연 지수의 역함수이다.
 
 ---
 ## Logarithm
-![](20.Pasted%20image%2020241003204050.png)
+![20.Pasted image 20241003204050](../pic/5.%20Math,%20numpy,%20PyTorch/20.Pasted%20image%2020241003204050.png)
 
 	자연로그는 자연지수와 마찬가지로 무한대로 증가하지만, x가 커질수록 무한대로 가는 속도가 훨씬 느려짐
 
@@ -19,7 +19,7 @@
 	x가 증가할 때 그에 대응하는 y의 변화가 순서대로 진행되고, 순서가 바뀌지 않는 것
 
 이 단조함수를 사인함수와 같은 비단조 함수와 비교할 수 있다.
-![](20.Pasted%20image%2020241003205534.png)
+![20.Pasted image 20241003205534](../pic/5.%20Math,%20numpy,%20PyTorch/20.Pasted%20image%2020241003205534.png)
 
 그럼 이것이 왜 중요한가?
 
@@ -32,7 +32,7 @@
 
 <span style="color:rgb(116, 195, 194)">로그는 x의 작은 값들을 확장시킨다.</span> 
 
-![](20.Pasted%20image%2020241003212320.png)
+![20.Pasted image 20241003212320](../pic/5.%20Math,%20numpy,%20PyTorch/20.Pasted%20image%2020241003212320.png)
 
 	로그의 핵심은 작은 x값들을 확장시킨다는 점이다.
 
@@ -44,7 +44,7 @@
 ---
 ## Logs with different bases
 
-![](20.Pasted%20image%2020241003214248.png)
+![20.Pasted image 20241003214248](../pic/5.%20Math,%20numpy,%20PyTorch/20.Pasted%20image%2020241003214248.png)
 
 모든 로그는 동일한 특성을 가진다.
 
@@ -80,7 +80,7 @@ plt.xlabel('x')
 plt.ylabel('log(x)')
 plt.show()
 ```
-![](20.Pasted%20image%2020241003215809.png)
+![20.Pasted image 20241003215809](../pic/5.%20Math,%20numpy,%20PyTorch/20.Pasted%20image%2020241003215809.png)
 
 로그에 지수를 적용 했을 때, 지수에 로그를 적용했을 때 비교
 ```python
@@ -102,4 +102,4 @@ plt.ylabel('f(g(x))')
 plt.legend(['unity','exp(log(x))','log(exp(x))'])
 plt.show()
 ```
-![](20.Pasted%20image%2020241003215934.png)
+![20.Pasted image 20241003215934](../pic/5.%20Math,%20numpy,%20PyTorch/20.Pasted%20image%2020241003215934.png)
