--- a/5. Math, numpy, PyTorch/24. Sampling variability.md
+++ b/5. Math, numpy, PyTorch/24. Sampling variability.md
@@ -110,4 +110,4 @@ plt.ylabel('Count')
 plt.xlabel('sample mean')
 plt.show()
 ```
-![](24.Pasted%20image%2020241006203355.png)
+![24.Pasted image 20241006203355](../pic/5.%20Math,%20numpy,%20PyTorch/24.Pasted%20image%2020241006203355.png)
