--- a/6. Gradient descent/34. Gradient descent in 2D.md
+++ b/6. Gradient descent/34. Gradient descent in 2D.md
@@ -152,3 +152,102 @@ plt.show()
 #      .5로 설정하니 경로가 이상한 곳으로 튀어나감 (overshooting)
 #      .00001로 설정하니, 기존 자리에서 얼마 움직이지 않았음
 ```
+
+----
+## Code challange
+
+### The thing to do
+
+<span style="color:rgb(118, 147, 234)">2D 경사 하강법 코드를 수정하여 경사 상승법을 수행하시오. 지역 최대값(local maximum)을 찾으세요!</span>
+
+<span style="color:rgb(116, 195, 194)">이 문제에는 두가지 해결방법이 있으니 둘다 찾아보세요!</span> 
+
+### 1. 위치 업데이트에서 수식 반전하기
+```python
+# random starting point (uniform between -2 and _2)
+localmax = np.random.rand(2)*4-2 # also try specifying coordinates
+startpnt = localmax[:] # make a copy, not re-assign
+
+# learning parameters
+learning_rate = .01
+training_epochs =1000
+
+# run through training
+trajectory = np.zeros((training_epochs,2))
+for i in range(training_epochs):
+    grad = np.array([
+        df_x(localmax[0],localmax[1]).evalf(),
+        df_y(localmax[0],localmax[1]).evalf()
+    ])
+    localmax = localmax - learning_rate * -1*grad # add _ or [:] to change a variable in-place
+    trajectory[i,:] = localmax
+
+print(localmin)
+print(startpnt)
+
+# let's have a look!
+plt.imshow(Z,extent=[x[0],x[-1],y[0],y[-1]],vmin=-5,vmax=5,origin='lower')
+plt.plot(startpnt[0],startpnt[1],'bs')
+plt.plot(localmax[0],localmax[1],'ro')
+plt.plot(trajectory[:,0],trajectory[:,1],'r')
+plt.legend(['rnd start','local max'])
+plt.colorbar()
+plt.show()
+```
+![](34.Pasted%20image%2020241019091820.png)
+
+### 2. 편미분에서 높이값 수식 반전하기
+
+```python
+# create derivative functions using sympy
+
+sx,sy = sym.symbols('sx,sy')
+
+sZ = 3*(1-sx)**2 * sym.exp(-(sx**2)-(sy+1)**2)\
+-10*(sx/5-sx**3-sy**5)*sym.exp(-sx**2-sy**2)\
+-1/3*sym.exp(-(sx+1)**2-sy**2)
+
+# create functions from the sympy-computed derivatives
+#sym.lambdify: Symbolic Object를 numpy 함수로 변환해서 호출할 수 있게 해줌
+# 경사상승법을 사용하려면 이부분에서 sZ에 -를 곱해줘야함
+df_x = sym.lambdify((sx,sy),sym.diff(-sZ,sx),'sympy')
+df_y = sym.lambdify((sx,sy),sym.diff(-sZ,sy),'sympy')
+
+#함수의 (1,1) 지점에서 X에 대한 편미분을 계싼하는 예제
+df_x(1,1).evalf()
+```
+
+
+```python
+# random starting point (uniform between -2 and _2)
+localmax = np.random.rand(2)*4-2 # also try specifying coordinates
+startpnt = localmax[:] # make a copy, not re-assign
+
+# learning parameters
+learning_rate = .01
+training_epochs =1000
+
+# run through training
+trajectory = np.zeros((training_epochs,2))
+for i in range(training_epochs):
+    grad = np.array([
+        df_x(localmax[0],localmax[1]).evalf(),
+        df_y(localmax[0],localmax[1]).evalf()
+    ])
+    localmax = localmax - learning_rate * grad # add _ or [:] to change a variable in-place
+    trajectory[i,:] = localmax
+
+print(localmin)
+print(startpnt)
+
+# let's have a look!
+## 여기서 함수를 음수로변경하면 plot 자체가 반전됨 
+plt.imshow(Z,extent=[x[0],x[-1],y[0],y[-1]],vmin=-5,vmax=5,origin='lower')
+plt.plot(startpnt[0],startpnt[1],'bs')
+plt.plot(localmax[0],localmax[1],'ro')
+plt.plot(trajectory[:,0],trajectory[:,1],'r')
+plt.legend(['rnd start','local max'])
+plt.colorbar()
+plt.show()
+```
+![](34.Pasted%20image%2020241019091920.png)
